# DescargasVita

./: CMakeLists.txt  README.md
include/: archivos.h  debugScreen.h  red.h
src/: archivos.cpp  main.cpp  red.cpp
